# CareerPilot-LangGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG_EVALUATION_STEP3_GUIDE.md  README.md  README_FINAL_OPTIMIZATION_GUIDE.md  VECTOR_RAG_STEP1_GUIDE.md  VECTOR_RAG_STEP2_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
careerpilot/: api.py  cli.py  config.py  graph.py  llm.py  rag.py  rag_evaluation.py  resume_parser.py  schemas.py  service.py  tools.py
careerpilot/llm_providers/: base.py  factory.py  openai_compatible.py
careerpilot/static/: style.css
careerpilot/templates/: index.html
data/evaluation/: rag_queries.json
data/jd/: agent_intern_jd.txt
data/knowledge/: agent_notes.txt  github_contribution_notes.txt  langgraph_notes.txt  rag_notes.txt
examples/: evaluation_cases.json  sample_jd_llm_agent.txt  sample_report.md  sample_resume_zh.txt
scripts/: evaluate_matching.py  evaluate_rag.py  test_llm_provider.py
tests/: test_api_observability.py  test_deployment.py  test_matching_evaluation.py  test_observability.py  test_phase2_hotfix.py  test_rag_evaluation.py  test_resume_upload.py  test_service.py  test_tools.py  test_vector_rag.py
