[project]
name = "careerpilot-langgraph"
version = "0.1.0"
description = "A LangGraph-powered career agent for resume/JD matching and project planning."
requires-python = ">=3.10"
dependencies = [
  "langgraph>=1.0.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pypdf>=5.0.0",
]

[project.scripts]
careerpilot = "careerpilot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
