[project]
name = "careerpilot-langgraph"
version = "0.1.0"
description = "A LangGraph-powered career agent for resume/JD matching and project planning."
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.6.0,<0.7.0",
  "langchain-openai>=0.3.0,<0.4.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-dotenv>=1.0.1",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
careerpilot = "careerpilot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["careerpilot*"]
exclude = ["data*", "outputs*", "examples*", "tests*"]
